# 2025-2

./: CRONOGRAMA.rst  README.rst  _cronograma.rst  lista-exercicios.csv  notas.csv  prova-substitutuva.csv  prova1.csv  prova2.csv  prova3.csv  ultra-regras.md
automata/: dfa.py  nfa.py  pyproject.toml
bf/: aaa  aaa.bf  aaa.c  bf.py  bfc.py  hello  hello.bf  hello.c  pyproject.toml  rot13
craftinginterpreters/: .gitignore  Makefile  shell.nix
craftinginterpreters/book/: a-map-of-the-territory.md  a-tree-walk-interpreter.md  evaluating-expressions.md  index.md  introduction.md  parsing-expressions.md  representing-code.md  scanning.md
craftinginterpreters/book-pt_BR/: a-map-of-the-territory.md
craftinginterpreters/python/: README.md  hello.lox  pyproject.toml
craftinginterpreters/python/lox/: __init__.py  expr.py  lox.py  printer.py  scanner.py  testing.py  tokens.py
craftinginterpreters/python/tests/: test_01_scanning.py  test_02_representing_code.py
craftinginterpreters/site/: a-map-of-the-territory.html  a-tree-walk-interpreter.html  evaluating-expressions.html  introduction.html  parsing-expressions.html  representing-code.html  (+1 more)
json/: pyproject.toml  test5.json
lark/: grammar.lark  json_parser.old.py  json_parser.py  lox.lark  lox_parser.py  pyproject.toml  test.json  test4.json  test6.json
lisp/: expr.lisp  lisp.py  pyproject.toml
lox/: error.lox  examples  exemplo.lox  exemplo.py  exemplo_parser.py  fib.lox  fib.py  fib_alt.py  hello.lox  pair.lox  pyproject.toml
regex/: datas.py  fib.lox  lexer.py  print.lox  router.py  routes.txt
(+20 files in other folders)
